# impute-first

./: README.md
IF_bestPipeline_scripts/chr_data_IF_workflow/: Snakefile  beagle_imputation.smk  env.yml  glimpse1_imputation.smk
IF_bestPipeline_scripts/chr_data_IF_workflow/configs/: exampleData_config.yaml
IF_bestPipeline_scripts/panel_files/HGSVC2/: README.md  download_panel_files.sh  fill_tags.sh  fix_VCF.py
benchmarking_downstream_workflows/: README.md  run_giraffe_with_vcf.sh  run_realignment_abra.sh  run_vg_giraffe_HPRC.sh  run_vg_personalized_pipeline.sh
benchmarking_downstream_workflows/linear/: run_bwa.sh
downstream_analysis/: README.md
downstream_analysis_with_giraffe/: README.md  run_GATK-HC.sh  run_vg_giraffe.sh
downstream_analysis_with_leviosam2/: README.md  config.yaml  invert.py
evaluation/: README.md
evaluation/upstream_eval/: CMakeLists.txt  README.md  gen_upstream_metrics.sh  run_analysis.sh  score_matched_vcf.cpp  upstream_metrics.yml
imputation/glimpse/: glimpse_ligate.sh
imputefirst_workflows/: README.md
imputefirst_workflows/downstream_analysis_with_giraffe/: gen_vg_autoindex_VCF.sh
imputefirst_workflows/downstream_analysis_with_leviosam2/: README.md  download_resource.sh  fix_HGSVC3.py  gen_diploid_ref.sh  snakefile
imputefirst_workflows/upstream_personalization/: genotyping.smk
preprocessing/: README.md  Snakefile  vc_from_markers.py
preprocessing/varcount/: mdparse.hpp  util.hpp
preprocessing_upstream_pipelines/: README.md  marker_benchmark.snk
preprocessing_upstream_pipelines/imputation/: README.md
preprocessing_upstream_pipelines/varcount/: CMakeLists.txt  hts_util.hpp  next_gt.cpp  varcount.cpp  vcf_score.cpp
preprocessing_upstream_pipelines/varcount/data/toy_data/: alns.sam  vars.vcf
preprocessing_workflows/: README.md  rowbowt.snk
preprocessing_workflows/configs/: hg38.hsvc.yaml
preprocessing_workflows/varcount/: README.md
reference_construction/: README.md  gen_bwa_index.sh  gen_diploid_ref.sh  gen_vg_autoindex.sh
upstream_personalization/: README.md  beagle_imputation.smk  download_exampleData.sh  download_linkage_maps.sh
upstream_personalization/HGSVC3_reference_panel/: prepare_hgsvc3_panel.sh
upstream_personalization/configs/: exampleData_config.yaml
(+20 files in other folders)
